# docker-ai-template

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  train.py
.github/workflows/: docker-image.yml
ai/: constants.py  data.py  models.py  transforms.py
sample_data/: labels.csv
