[tool.poetry]
name = "docker-demo"
version = "0.1.0"
description = ""
authors = ["Clément POIRET <poiret.clement@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
timm = { version = "^0.8", allow-prereleases = true }
lightning = "^2.0.1"
lightning-flash = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
